--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "helmet": "^3.15.1",
+    "morgan": "^1.9.1",
     "winston": "^3.2.1"
   }
 }
