--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
+    "mongoose": "^5.4.16",
     "morgan": "^1.9.1",
     "winston": "^3.2.1"
   }
