Create login endpoint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
         "arrow-parens": "off",
         "import/prefer-default-export": "off",
         "no-await-in-loop": "off",
-        "no-restricted-syntax": "off"
+        "no-restricted-syntax": "off",
+        "no-underscore-dangle": "off"
     }
 }
