Add imgur upload in category create

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-PORT=8081
-
-MONGODB_URI="mongodb://user:password@example.com:12345/db"
-
 APP_SECRET="SECRET"
+IMGUR_CLIENT_ID="CLIENT_ID"
+IMGUR_ALBUM_ID="ALBUM_ID"
+IMGUR_USERNAME="username"
+IMGUR_PASSWORD="password"
+MONGODB_URI="mongodb://user:password@example.com:12345/db"
+PORT=8081
