Use configured cors only in dev

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ IMGUR_ALBUM_ID="ALBUM_ID"
 IMGUR_USERNAME="username"
 IMGUR_PASSWORD="password"
 MONGODB_URI="mongodb://user:password@example.com:12345/db"
+NODE_ENV="development"
 PORT=8081
