--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
